Change all URL to URI, remove obsolete connections. Simplify code